--- a/src/main/webapp/_03_Inject.xhtml
+++ b/src/main/webapp/_03_Inject.xhtml
@@ -4,6 +4,6 @@
         <title> I'm first JSF project </title>
     </head>
     <body>
-        <h1> #{namedtuto.nameData} </h1>
+        <h1> #{injecttuto.tukeden} </h1>
     </body>
 </html>
